--- a/modulo_1/laboratorio_extra/index.html
+++ b/modulo_1/laboratorio_extra/index.html
@@ -1,104 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lemoncode</title>
-    <link type="text/css" rel="stylesheet" href="styles.scss" />
-  </head>
-  <body>
-    <header>
-      <div class="toolbar">
-        <input placeholder="Buscar" />
-        <div>Víctor Borrego Pérez</div>
-      </div>
-      <div class="page-title">Welcome Lemoncoders!</div>
-    </header>
+<html lang="es">
 
-    <div class="page-container">
-      <nav>
-        <div class="menu-container">
-          <div class="menu-title">Frameworks</div>
-          <ul>
-            <li>React</li>
-            <li>Svelte</li>
-            <li>Vue</li>
-            <li>Angular</li>
-          </ul>
-        </div>
-      </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lemoncode</title>
+  <link type="text/css" rel="stylesheet" href="styles.css" />
+</head>
 
-      <main>
-        <div class="list">
-          <div class="card item">
-            <img
-              src="https://avatars.githubusercontent.com/u/14540103?s=96&v=4"
-            />
-            <div class="member-name">Antonio Contreras</div>
-          </div>
-
-          <div class="card item">
-            <img
-              src="https://avatars.githubusercontent.com/u/1457912?s=96&v=4"
-            />
-            <div class="member-name">Braulio Díez</div>
-          </div>
-
-          <div class="card item">
-            <img
-              src="https://avatars.githubusercontent.com/u/13205689?s=96&v=4"
-            />
-            <div class="member-name">Santiago Camargo</div>
-          </div>
-
-          <div class="card item">
-            <img
-              src="https://avatars.githubusercontent.com/u/43171355?s=96&v=4"
-            />
-            <div class="member-name">Francisco Javier de Jesús Mazzoni</div>
-          </div>
-          <div class="card item">
-            <img
-              src="https://avatars.githubusercontent.com/u/24454225?s=96&v=4"
-            />
-            <div class="member-name">Javier Calzado</div>
-          </div>
-          <div class="card item">
-            <img
-              src="https://avatars.githubusercontent.com/u/7754966?s=96&v=4"
-            />
-            <div class="member-name">Jaime Salas</div>
-          </div>
-          <div class="card item">
-            <img
-              src="https://avatars.githubusercontent.com/u/26490961?s=96&v=4"
-              width="96"
-            />
-            <div class="member-name">Jose Manuel</div>
-          </div>
-          <div class="card item">
-            <img
-              src="https://avatars.githubusercontent.com/u/58438522?s=96&v=4"
-            />
-            <div class="member-name">Juan Pablo Martínez</div>
-          </div>
-          <div class="card item">
-            <img
-              src="https://avatars.githubusercontent.com/u/4374977?s=96&v=4"
-            />
-            <div class="member-name">Daniel Sánchez</div>
-          </div>
-          <div class="card item">
-            <img
-              src="https://avatars.githubusercontent.com/u/43609530?s=96&v=4"
-            />
-            <div class="member-name">Víctor Borrego</div>
-          </div>
-        </div>
-      </main>
+<body>
+  <header>
+    <div class="toolbar">
+      <input placeholder="Buscar" />
+      <div>Pablo Rodríguez Albarrán</div>
     </div>
+    <div class="page-title">Welcome Lemoncoders!</div>
+  </header>
 
-    <footer>Master Lemoncode</footer>
-  </body>
+  <div class="page-container">
+    <nav>
+      <div class="menu-container">
+        <div class="menu-title">Frameworks</div>
+        <ul>
+          <li class="selected"><span>React</span></li>
+          <li><span>Svelte</span></li>
+          <li><span>Vue</span></li>
+          <li><span>Angular</span></li>
+        </ul>
+      </div>
+    </nav>
+
+    <main>
+      <div class="list">
+        <div class="card item">
+          <img src="https://avatars.githubusercontent.com/u/14540103?s=96&v=4" />
+          <div class="member-name">Antonio Contreras</div>
+        </div>
+
+        <div class="card item">
+          <img src="https://avatars.githubusercontent.com/u/1457912?s=96&v=4" />
+          <div class="member-name">Braulio Díez</div>
+        </div>
+
+        <div class="card item">
+          <img src="https://avatars.githubusercontent.com/u/13205689?s=96&v=4" />
+          <div class="member-name">Santiago Camargo</div>
+        </div>
+
+        <div class="card item">
+          <img src="https://avatars.githubusercontent.com/u/43171355?s=96&v=4" />
+          <div class="member-name">Francisco Javier de Jesús Mazzoni</div>
+        </div>
+        <div class="card item">
+          <img src="https://avatars.githubusercontent.com/u/24454225?s=96&v=4" />
+          <div class="member-name">Javier Calzado</div>
+        </div>
+        <div class="card item">
+          <img src="https://avatars.githubusercontent.com/u/7754966?s=96&v=4" />
+          <div class="member-name">Jaime Salas</div>
+        </div>
+        <div class="card item">
+          <img src="https://avatars.githubusercontent.com/u/26490961?s=96&v=4" width="96" />
+          <div class="member-name">Jose Manuel</div>
+        </div>
+        <div class="card item">
+          <img src="https://avatars.githubusercontent.com/u/58438522?s=96&v=4" />
+          <div class="member-name">Juan Pablo Martínez</div>
+        </div>
+        <div class="card item">
+          <img src="https://avatars.githubusercontent.com/u/4374977?s=96&v=4" />
+          <div class="member-name">Daniel Sánchez</div>
+        </div>
+        <div class="card item">
+          <img src="https://avatars.githubusercontent.com/u/43609530?s=96&v=4" />
+          <div class="member-name">Víctor Borrego</div>
+        </div>
+      </div>
+    </main>
+  </div>
+
+  <footer>Master Lemoncode</footer>
+</body>
+
 </html>
