--- a/modulo_1/laboratorio_basico/ejercicio2/index.html
+++ b/modulo_1/laboratorio_basico/ejercicio2/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Dos temas</title>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link type="text/css" rel="stylesheet" href="mystyle.scss" />
+  <title>Dos Temas</title>
 </head>
 
 <body>
-  <main>
+  <div class="temas-container">
     <div class="contenedor-1">
       <div class="box base-color">Base</div>
       <div class="box darken">Important</div>
@@ -26,8 +27,7 @@
       <span class="secondary-font">Secondary font</span>
       <div class="box shadow">Box with shadow</div>
     </div>
-
-  </main>
+  </div>
 </body>
 
 </html>
