--- a/modulo_1/laboratorio_avanzado/src/index.html
+++ b/modulo_1/laboratorio_avanzado/src/index.html
@@ -60,8 +60,13 @@
       margin-bottom: 1rem;
     }
 
-    #top-text {
+    #top-text-1,
+    #top-text-2 {
       font-weight: 700;
+    }
+
+    #top-text-2 {
+      display: none;
     }
 
     .top {
@@ -120,6 +125,14 @@
       .section-title {
         font-size: 1.6rem;
       }
+
+      #top-text-1 {
+        display: none;
+      }
+
+      #top-text-2 {
+        display: inline;
+      }
     }
 
     @media (max-width: 700px) {
@@ -130,18 +143,11 @@
       .section-title {
         font-size: 2.4rem;
       }
+
+
     }
   </style>
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const topText = document.getElementById("top-text");
-      if (window.innerWidth > 1280) {
-        topText.innerText = "5";
-      } else {
-        topText.innerText = "3";
-      }
-    });
-  </script>
+
 </head>
 
 <body>
@@ -157,7 +163,7 @@
   </header>
   <main>
     <div class="section-title">
-      Los <span id="top-text"></span> más populares hoy
+      Los <span id="top-text-1">5</span> <span id="top-text-2">3</span> más populares hoy
     </div>
     <section class="top">
       <div class="top-item"><img src="assets/top/5.jpg" /></div>
